--- a/composer.json
+++ b/composer.json
@@ -1,9 +1,10 @@
 {
   "name": "carlonicora/minimalism-mailer",
   "description": "Mailer service for minimalism",
-  "version": "1.0.0-beta2",
+  "version": "1.0.0-beta3",
   "homepage": "https://carlonicora.com",
   "time": "2019-05-14",
+  "license": "MIT",
   "type": "library",
   "minimum-stability": "beta",
   "authors": [
