--- a/composer.json
+++ b/composer.json
@@ -1,12 +1,12 @@
 {
   "name": "carlonicora/minimalism-service-mailer",
   "description": "Mailer service for minimalism",
-  "version": "1.0.2",
+  "version": "2.0.0-beta1",
   "homepage": "https://carlonicora.com",
   "time": "2019-05-14",
   "license": "MIT",
   "type": "library",
-  "minimum-stability": "stable",
+  "minimum-stability": "beta",
   "authors": [
     {
       "name": "Carlo Nicora",
@@ -17,12 +17,20 @@
   ],
   "autoload": {
     "psr-4": {
-      "carlonicora\\minimalism\\services\\mailer\\":"src/"
+      "CarloNicora\\Minimalism\\Services\\Mailer\\":"src/"
     }
+  },
+  "autoload-dev": {
+    "psr-4": {
+      "CarloNicora\\Minimalism\\Services\\Mailer\\Tests\\":"tests/"
+    }
+  },
+  "require-dev": {
+    "phpunit/phpunit": "^9"
   },
   "require": {
     "php": "^7.4",
-    "carlonicora/minimalism": "~10.0",
+    "carlonicora/minimalism": "~11.0",
     "phpmailer/phpmailer": "*",
     "sendgrid/sendgrid": "~7",
     "twig/twig":"~2.0"
